// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NationActionButton component tests NationActionButton press disabled 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NationActionButton
    disable={true}
    onPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={1}
        disabled={true}
        onPress={[MockFunction]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Image
          source={undefined}
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#8E8E93",
              "fontSize": 10,
              "marginTop": 4,
            }
          }
        />
      </TouchableOpacity>,
      "disable": true,
      "onPress": [MockFunction],
      "opacity": 0.4,
      "style": Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        },
        undefined,
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 1,
        "children": Array [
          <Image
            source={undefined}
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#8E8E93",
                "fontSize": 10,
                "marginTop": 4,
              }
            }
          />,
        ],
        "disabled": true,
        "onPress": [MockFunction],
        "style": Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": undefined,
            "ellipsizeMode": "tail",
            "style": Object {
              "backgroundColor": "transparent",
              "color": "#8E8E93",
              "fontSize": 10,
              "marginTop": 4,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={1}
          disabled={true}
          onPress={[MockFunction]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Image
            source={undefined}
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#8E8E93",
                "fontSize": 10,
                "marginTop": 4,
              }
            }
          />
        </TouchableOpacity>,
        "disable": true,
        "onPress": [MockFunction],
        "opacity": 0.4,
        "style": Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 15,
            "height": 48,
            "justifyContent": "center",
            "width": 48,
          },
          undefined,
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": Array [
            <Image
              source={undefined}
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#8E8E93",
                  "fontSize": 10,
                  "marginTop": 4,
                }
              }
            />,
          ],
          "disabled": true,
          "onPress": [MockFunction],
          "style": Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": undefined,
              "ellipsizeMode": "tail",
              "style": Object {
                "backgroundColor": "transparent",
                "color": "#8E8E93",
                "fontSize": 10,
                "marginTop": 4,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`NationActionButton component tests NationActionButton press enabled 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NationActionButton
    disable={false}
    iconSource={1}
    onPress={[MockFunction]}
    title="TEST"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.4}
        disabled={false}
        onPress={[MockFunction]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Image
          source={1}
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#8E8E93",
              "fontSize": 10,
              "marginTop": 4,
            }
          }
        >
          TEST
        </Text>
      </TouchableOpacity>,
      "disable": false,
      "iconSource": 1,
      "onPress": [MockFunction],
      "opacity": 1,
      "style": Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        },
        undefined,
      ],
      "title": "TEST",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.4,
        "children": Array [
          <Image
            source={1}
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#8E8E93",
                "fontSize": 10,
                "marginTop": 4,
              }
            }
          >
            TEST
          </Text>,
        ],
        "disabled": false,
        "onPress": [MockFunction],
        "style": Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "TEST",
            "ellipsizeMode": "tail",
            "style": Object {
              "backgroundColor": "transparent",
              "color": "#8E8E93",
              "fontSize": 10,
              "marginTop": 4,
            },
          },
          "ref": null,
          "rendered": "TEST",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.4}
          disabled={false}
          onPress={[MockFunction]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Image
            source={1}
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#8E8E93",
                "fontSize": 10,
                "marginTop": 4,
              }
            }
          >
            TEST
          </Text>
        </TouchableOpacity>,
        "disable": false,
        "iconSource": 1,
        "onPress": [MockFunction],
        "opacity": 1,
        "style": Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 15,
            "height": 48,
            "justifyContent": "center",
            "width": 48,
          },
          undefined,
        ],
        "title": "TEST",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.4,
          "children": Array [
            <Image
              source={1}
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#8E8E93",
                  "fontSize": 10,
                  "marginTop": 4,
                }
              }
            >
              TEST
            </Text>,
          ],
          "disabled": false,
          "onPress": [MockFunction],
          "style": Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "TEST",
              "ellipsizeMode": "tail",
              "style": Object {
                "backgroundColor": "transparent",
                "color": "#8E8E93",
                "fontSize": 10,
                "marginTop": 4,
              },
            },
            "ref": null,
            "rendered": "TEST",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`NationActionButton component tests NationActionButton press works 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NationActionButton
    enabled={true}
    onPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.4}
        disabled={undefined}
        onPress={[MockFunction]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <Image
          source={undefined}
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#8E8E93",
              "fontSize": 10,
              "marginTop": 4,
            }
          }
        />
      </TouchableOpacity>,
      "enabled": true,
      "onPress": [MockFunction],
      "opacity": 1,
      "style": Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 15,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        },
        undefined,
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.4,
        "children": Array [
          <Image
            source={undefined}
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#8E8E93",
                "fontSize": 10,
                "marginTop": 4,
              }
            }
          />,
        ],
        "disabled": undefined,
        "onPress": [MockFunction],
        "style": Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": undefined,
            "ellipsizeMode": "tail",
            "style": Object {
              "backgroundColor": "transparent",
              "color": "#8E8E93",
              "fontSize": 10,
              "marginTop": 4,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.4}
          disabled={undefined}
          onPress={[MockFunction]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Image
            source={undefined}
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#8E8E93",
                "fontSize": 10,
                "marginTop": 4,
              }
            }
          />
        </TouchableOpacity>,
        "enabled": true,
        "onPress": [MockFunction],
        "opacity": 1,
        "style": Array [
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 15,
            "height": 48,
            "justifyContent": "center",
            "width": 48,
          },
          undefined,
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.4,
          "children": Array [
            <Image
              source={undefined}
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#8E8E93",
                  "fontSize": 10,
                  "marginTop": 4,
                }
              }
            />,
          ],
          "disabled": undefined,
          "onPress": [MockFunction],
          "style": Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": undefined,
              "ellipsizeMode": "tail",
              "style": Object {
                "backgroundColor": "transparent",
                "color": "#8E8E93",
                "fontSize": 10,
                "marginTop": 4,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`NationActionButton component tests NationActionButton renders correctly 1`] = `
<View
  disable={true}
  iconSource={1}
  opacity={0.4}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderRadius": 15,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
      undefined,
    ]
  }
  title="Chat"
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Image
      source={1}
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "transparent",
          "color": "#8E8E93",
          "fontSize": 10,
          "marginTop": 4,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;
